<resources>
    <string name="app_name">Wallcam</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="password_signup">Password (min 6 alphanumeric)</string>
    <string name="action_sign_in">LOG IN</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_invalid_password_type">This password must be alphanumeric</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_invalid_name">Name must contains at least five characters</string>
    <string name="error_invalid_cpassword">Password does not match</string>
    <string name="error_invalid_contact_format">Invalid format</string>
    <string name="error_field_required">This field is required</string>
    <string name="email_use">Email already been register</string>
    <string name="current_password">Current password does not match</string>
    <string name="error_address">Invalid address</string>
    <string name="error_date">Appointment date must be one week later</string>
    <string name="error_product">Please select at least one product</string>
    <string name="new_password_same">New password same with current password</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="logout"> Log Out</string>
    <string name="icon">Icon</string>
    <string name="signup">No account yet? Create One</string>
    <string name="title_activity_sign_up">Sign up</string>
    <string name="title_activity_signup">Sign Up</string>
    <string name="name">Name</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="birthday">Date of Birth</string>
    <string name="phone">Mobile Number</string>
    <string name="btnSingup">SIGN UP</string>
    <string name="login">LOG IN</string>
    <string name="title_activity_login2">Sign in</string>
    <item name="visible" type="id" />
    <item name="masked" type="id" />
    <string name="title_activity_settings">Settings</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="category">This is a Category</string>
    <string name="title_activity_navigation">Wallcam</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="editProfile">Edit Profile</string>
    <string name="btnUpdate">UPDATE</string>
    <string name="chg_password">Change Password</string>
    <string name="screenShot">Screen Shot</string>
    <string name="CurrentPassword">Current Password</string>
    <string name="newPassword">New Password (min 6 alphanumeric)</string>
    <string name="confirmNewPassword">Confirm New Password</string>
    <string name="make_appointment">Make Appointment</string>
    <string name="company">Company Logo</string>
    <string name="company_name">Perfect Wall Decoration Services</string>
    <string name="companay_address">55-1, Jalan 7/7A, Seksyen 7, \n43650 Bandar Baru Bangi, \nSelangor, Malaysia.</string>
    <string name="companay_contact">+603-82107068</string>
    <string name="company_email">hermen_eu@hotmail.com</string>
    <string name="company_business">Business Hours: \nMonday - Sunday\n10:30 AM - 7:30 PM</string>
    <string name="appointment_date">Appointment Date</string>
    <string name="appointment_time">Appointment Time:</string>
    <string name="appintment_name">Resident Name</string>
    <string name="appointment_address">House Address</string>
    <string name="appoinement_contact">Contact No.</string>
    <string name="hint_date">*Appointment Date should be one week later.</string>
    <string name="product">Product Interested: (Select at least one)</string>
    <string name="wallpaper_brick">Brick Pattern Wallpaper</string>
    <string name="wallpaper_blue">Blue Pattern Wallpaper</string>
    <string name="wallpaper_wooden">Wooden Pattern Wallpaper</string>
    <string name="wallpaper_word">Word Pattern Wallpaper</string>
    <string name="art_work">Art Work</string>
    <string name="warning">Products shown are for illustration purposes only.</string>
    <string-array name="time_array">
        <item>09.00 a.m.</item>
        <item>10.00 a.m.</item>
        <item>11.00 a.m.</item>
        <item>12.00 p.m.</item>
        <item>01.00 p.m.</item>
        <item>02.00 p.m.</item>
        <item>03.00 p.m.</item>
        <item>04.00 p.m.</item>
    </string-array>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
