<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="cn.easyar.samples.helloarvideo.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_general" />

    <header
        android:fragment="cn.easyar.samples.helloarvideo.SettingsActivity$NotificationPreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_header_notifications" />

    <header
        android:fragment="cn.easyar.samples.helloarvideo.SettingsActivity$DataSyncPreferenceFragment"
        android:icon="@drawable/profile"
        android:title="@string/logout" />


</preference-headers>
